samples/_failures_safe/1761286246_498082_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_edc54b6e.c: In function ‘main’:
./samples/SAFE/__tmp_edc54b6e.c:174:17: error: expected ‘;’ at end of input
  174 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_edc54b6e.c:174:9: error: expected declaration or statement at end of input
  174 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_edc54b6e.c:174:9: error: expected declaration or statement at end of input
